# afb-libpython

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MAINTAINERS  README.md
.cache/clangd/index/: py-afb.c.3125407C25C2D15C.idx  py-afb.h.F6E2657FE3DD8045.idx  py-callbacks.c.BC4E1D8DA9195D40.idx  py-callbacks.h.1C546E1F60C25C5F.idx  py-utils.c.62D4980647F320FB.idx  py-utils.h.6A82E4DCB96C76CD.idx
conf.d/cmake/: 00-debian-config.cmake  00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/packaging/rpm/: afb-libpython.spec
conf.d/project/etc/: CMakeLists.txt  oidc-local.json  oidc-oauth2.json
conf.d/project/htdocs/: index.html
conf.d/wgt/: config.xml.in
docs/: available-functions.md
samples/: README.md  event-api.py  loa-api.py  run  simple-api.py  subcall-api.py  test-api.py  test.py
samples/afbpyglue/: __init__.py
src/: CMakeLists.txt  py-afb.c  py-afb.h  py-callbacks.c  py-callbacks.h  py-utils.c  py-utils.h
tests/: tests.py
